# mankoros

./: .gitignore  .rustfmt.toml  Cargo.toml  Makefile  README.md  linker.ld  rust-toolchain.toml  trace.md
.cargo/: config.toml
doc/: arch.md  async.md  fs.md  process.md  sync.md  syscall.md
src/: backtrace.rs  boot.rs  device_tree.rs  dtb.asm  final_test.rs  lazy_init.rs  logging.rs  main.rs  mcount.asm  syscall.rs  utils.rs
src/arch/: hart_local.rs  mod.rs
src/axerrno/: linux_errno.rs  mod.rs
src/consts/: address_space.rs  const_register.rs  device.rs  memlayout.rs  mod.rs  time.rs
src/consts/platform/: mod.rs  qemu.rs
src/driver/: blk.rs  mod.rs  uart.rs
src/driver/serial/: mod.rs  sifive.rs  uart8250.rs
src/drivers/: cpu.rs  manager.rs  mod.rs  plic.rs
src/drivers/blk/: dev.rs  mod.rs  probe.rs  virtio.rs
src/drivers/serial/: mod.rs  sifive.rs  uart8250.rs
src/executor/: hart_local.rs  mod.rs  task_queue.rs  util_futures.rs  yield_future.rs
src/fs/: debugfs.rs  disk.rs  fat32.rs  fatfs.rs  mod.rs  npipe.rs  partition.rs  pipe.rs  root.rs  stdio.rs
src/fs/devfs/: dir.rs  mod.rs  zero.rs
src/fs/fat32/: dir.rs  file.rs  fs.rs  mod.rs
src/fs/memfs/: mod.rs  tmpdir.rs  tty.rs  zero.rs
src/fs/new_vfs/: dentry.rs  dentry_cache.rs  info.rs  inode.rs  mod.rs  mount.rs  page_cache.rs  path.rs  path_cache.rs  path_file.rs  sync_attr_cache.rs  sync_attr_file.rs  top.rs  underlying.rs
src/fs/nfat32/: dir.rs  file.rs  fs.rs  mod.rs  tools.rs
src/fs/procfs/: interrupts.rs  mod.rs
src/fs/vfs/: filesystem.rs  mod.rs  node.rs  path.rs
src/interrupt/: context.rs  mod.rs  timer.rs  trap.asm  trap.rs
src/memory/: address.rs  frame.rs  frame_ref_cnt.rs  heap.rs  heap_allocator.rs  mod.rs  user_ptr.rs
src/memory/address/: mod.rs  phy.rs  phys.rs  virt.rs
src/memory/pagetable/: mod.rs  pagetable.rs  pte.rs
src/process/: aux_vector.rs  context.rs  elf_loader.rs  lproc.rs  lproc_mgr.rs  mod.rs  pid.rs  pid_tid.rs  process.rs  share_page_mgr.rs  shared_frame_mgr.rs  user_space.rs  userloop.rs
src/process/elf/: aux_vector.rs  info.rs  (+1 more)
src/signal/: mod.rs
src/sync/: mod.rs  mutex.rs  sleep.rs
src/syscall/: fs.rs  io.rs  memory.rs  misc.rs  mod.rs  process.rs  resource.rs  signal.rs
src/timer/: async_sleep.rs  mod.rs  rusage.rs  timespec.rs  timestat.rs  timeval.rs  tms.rs
src/tools/: arena.rs  consts.rs  errors.rs  handler_pool.rs  hash.rs  mod.rs  pointers.rs  sync_ptr.rs  user_check.rs  with_dirty.rs
src/trap/: context.rs  fp_ctx.rs  kernel_exception.rs  kernel_interrupt.rs  mod.rs  timer.rs  trap.asm  trap.rs
src/vfs/: filesystem.rs  node.rs
src/xdebug/: backtrace.rs  mod.rs
(+9 files in other folders)
