[package]
name = "mankoros"
version = "0.1.0"
edition = "2021"
authors = [
    "Easton Man <manyang.me@outlook.com>",
    "Origami404 <Origami404@foxmail.com>"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "1.3.2"
rustversion = "1.0.11"
sbi-rt = "0.0.2"
log = "0.4.17"

[dependencies.lazy_static]
# For runtime initializing static vars
version = "1.4.0"
features = ["spin_no_std"] # For no-std env
