[package]
name = "mankoros"
version = "0.1.0"
edition = "2021"
authors = [
    "Easton Man <manyang.me@outlook.com>",
    "Origami404 <Origami404@foxmail.com>",
    "Sora Shu <sorashu@outlook.com>"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "1.3.2"
rustversion = "1.0.11"
sbi-rt = "0.0.2"
log = "0.4.17"
buddy_system_allocator = "0.9.0"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", version = "0.1.0" }
humansize = { version = "2.1.3", features = ["no_alloc"] } # For better size printing
riscv = "0.10.1"
xmas-elf = "0.8.0"
async-task = { version = "4.4.0", default-features = false }

virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers.git", rev = "0491154" }

[dependencies.lazy_static]
# For runtime initializing static vars
version = "1.4.0"
features = ["spin_no_std"] # For no-std env
