[package]
name = "mankoros"
version = "0.1.0"
edition = "2021"
authors = [
    "Easton Man <manyang.me@outlook.com>",
    "Origami404 <Origami404@foxmail.com>",
    "Sora Shu <sorashu@outlook.com>"
]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
bitflags = "2.3.1"
rustversion = "1.0.11"
sbi-rt = { version = "0.0.2", features = ["legacy"] }
log = "0.4.17"
buddy_system_allocator = "0.9.0"
bitmap-allocator = { git = "https://github.com/rcore-os/bitmap-allocator", version = "0.1.0" }
humansize = { version = "2.1.3", features = ["no_alloc"] } # For better size printing
riscv = "0.10.1"
xmas-elf = "0.9.0"
async-task = { version = "4.4.0", default-features = false }
virtio-drivers = { git = "https://github.com/rcore-os/virtio-drivers.git", rev = "0491154" }
mbr-nostd = "0.1.0"
ringbuffer = "0.13.0"
cfg-if = "1.0.0"
spin = "0.9.8"
fdt = "0.1.5"

[dependencies.lazy_static]
# For runtime initializing static vars
version = "1.4.0"
features = ["spin_no_std"] # For no-std env

[dependencies.fatfs]
git = "https://github.com/rafalh/rust-fatfs"
rev = "a3a834e"
default-features = false
features = ["alloc", "lfn", "log_level_trace", "unicode"]
